--- a/MyProject/public_html/css/style-ind.css
+++ b/MyProject/public_html/css/style-ind.css
@@ -34,14 +34,69 @@ header{
 	box-sizing: border-box;
 	border-radius: 8px;
 }
-.logo{
-	width: 180px;
-	height: 65px;
-	font-size: 0;
-	/*margin: -30px 0 0 20px;*/
-	display: flex;
-	flex: none;
-	align-items: center;
+.search{
+    margin: 0 auto;
+}
+.searching{
+    width: auto;
+    height: auto;
+}
+.search_string{
+    float: left;
+    margin-bottom: 14px;
+}
+.btn1{
+    float: right;
+}
+.btn2{
+    float: right;
+    /*margin-top: -14px;*/
+}
+.google{
+    width: 230px;
+    height: 30px;
+    border: none;
+    border-radius: 20em;
+    box-shadow: 0 1px 2px 1px #000;
+    opacity: 0.8;
+    padding-left: 10px;
+}
+.but1{
+    background: none;
+    border: none;
+    opacity: 0.8;
+    padding: 0;
+    margin: -10px 38px 0 0;
+}
+.but{
+    background: none;
+    border: none;
+    opacity: 0.8;
+    padding: 0;
+    margin: -9px 0 0 9px;
+
+}
+.but1:hover{  
+    cursor: pointer;
+    opacity: 1;
+    /*почему тут курсор не меняется*?? на лупу*/
+    -/*moz-cursor: url(../img/lupa.cur);
+    cursor: url(../img/lupa.cur);*/
+}
+.but:hover{  
+    cursor: pointer;
+    opacity: 1;
+    /*почему тут курсор не меняется*?? на лупу*/
+    -/*moz-cursor: url(../img/lupa.cur);
+    cursor: url(../img/lupa.cur);*/
+}
+.yandex{
+    width: 270px;
+    height: 26px;
+    padding-left: 10px;
+    border-color: yellow;
+    /*background: #58a;*/
+    
 }
 /*.nav{
 	width: 380px;
@@ -239,7 +294,7 @@ main{
 }
 .col{
     /*background: #58EA55;*/
-    flex-basis: calc(50% - 10px * 1/2);
+    flex-basis: calc(50% - 10px);
     /*align-content: space-between;*/
     -webkit-flex-wrap: wrap;
     -moz-flex-wrap: wrap;
@@ -248,41 +303,7 @@ main{
     flex-wrap: wrap;
     display: flex;
 }
-.search{
-    margin: 0 auto;
-}
-.google{
-    width: 230px;
-    height: 30px;
-    border: none;
-    border-radius: 20em;
-    box-shadow: 0 1px 2px 1px #000;
-    opacity: 0.8;
-    padding-left: 10px;
-}
-.but{
-    background: none;
-    border: none;
-    opacity: 0.8;
-}
-.but img{
-    padding-top: 10px;
-}
-.but:hover{  
-    cursor: pointer;
-    opacity: 1;
-    /*почему тут курсор не меняется*?? на лупу*/
-    -/*moz-cursor: url(../img/lupa.cur);
-    cursor: url(../img/lupa.cur);*/
-}
-.yandex{
-    width: 230px;
-    height: 24px;
-    padding-left: 10px;
-    border-color: yellow;
-    /*background: #58a;*/
-    
-}
+
 .sendQuest{
     margin: 0 auto;
 }
