--- a/MyProject/public_html/css/style-ind2.css
+++ b/MyProject/public_html/css/style-ind2.css
@@ -1,5 +1,5 @@
 html{
-	/*min-height: 100%;*/
+	min-height: 100%;
 	display: flex;
 	flex-direction: column;
     font-family: Comic Sans MS;
@@ -11,19 +11,17 @@ body{
 	display: flex;
 	flex-direction: column;
 	flex: auto;
-	/*height: 100%;*/
+	height: 100%;
 }
 a{
 	text-decoration: none;
 }
 h2{
-    color: red;
-}
-h3{
-	text-align: center;
-	color: #000;
+    color: #D0FF00;
+    text-shadow: #FF6711 0 0 2px;
 }
 header{
+	/*background: linear-gradient(45deg,#E0FF9D,#D3FF73,#B2E652,#A0D440,#91C531,#85C60F,#76AF0D,#5DA411);*/ /*делай вообще без фона!! так круче будет*/
 	width: 100%;
 	max-width: 1004px;
 	min-width: 430px;
@@ -35,15 +33,6 @@ header{
 	justify-content: space-between;
 	box-sizing: border-box;
 	border-radius: 8px;
-}
-.home{
-    width: 70px;
-    height: auto;
-    margin-left: 30px;
-    opacity: 0.7;
-}
-.home:hover{
-    opacity: 1;
 }
 .search{
     margin: 0 auto;
@@ -64,8 +53,7 @@ header{
     /*margin-top: -14px;*/
 }
 .google{
-    margin-left: -20px;
-    width: 250px;
+    width: 230px;
     height: 30px;
     border: none;
     border-radius: 20em;
@@ -103,8 +91,7 @@ header{
     cursor: url(../img/lupa.cur);*/
 }
 .yandex{
-    margin-left: -20px;
-    width: 290px;
+    width: 270px;
     height: 26px;
     padding-left: 10px;
     border-color: yellow;
@@ -234,8 +221,7 @@ ul>li{
             -webkit-justify-content: space-between;
             -ms-flex-pack: justify;
             justify-content: space-between;
-            /*padding: 0 10px;*/
-            height: 30px;
+            padding: 15px;
             border-bottom: 1px solid #eceeef;
         }
 
@@ -267,24 +253,12 @@ ul>li{
             -webkit-flex: 1 1 auto;
             -ms-flex: 1 1 auto;
             flex: 1 1 auto;
-            /*padding: 7px;*/
+            padding: 15px;
             overflow: auto;
-        }
-        .modal-body input{
-        	border-radius: 5px;
-    		border: none;
-    		padding: 3px;
-    		font-family: Comic Sans MS;
-    		background: linear-gradient(45deg,#E3FFAA,#E0FF9D,#C4FF5F);
-        }
-        .toggle input {
-        	border-radius: 5px;
-    		border: none;
-    		background: linear-gradient(45deg,#E3FFAA,#C4FF5F);
         }
 
 main{
-	/*height: 100%;*/
+	height: 100%;
 	max-width: 1004px;
 	min-width: 430px;
 	margin: 0 auto;
@@ -295,22 +269,6 @@ main{
 	justify-content: space-between;
 	box-sizing: border-box;
 	display: flex;
-	margin-bottom: 30px;
-}
-.account_info{
-	flex: auto;
-	display: flex;
-	justify-content: space-around;
-	margin: 70px auto 200px;
-}
-.account_text{
-	background: rgba(242,255,170, 0.5);
-	padding: 20px;
-	border-radius: 7px;
-}
-.account_img img{
-	width: 170px;
-	height: 170px;
 }
 /*width: 100%;
     max-width: 1004px;
@@ -324,7 +282,7 @@ main{
     box-sizing: border-box;
     border-radius: 8px;*/
 .col_categ{
-	flex-basis: calc(50% - 3px);
+	flex-basis: calc(16% - 10px * 1/2);
 	/*align-content: space-between;*/
 	-webkit-flex-wrap: wrap;
 	-moz-flex-wrap: wrap;
@@ -334,26 +292,10 @@ main{
 	display: flex;
     font-size: 1rem;
 }
-.categ{
-	background: linear-gradient(45deg,#E0FF9D,#D3FF73,#B2E652,#A0D440,#91C531,#76AF0D,#5DA411);
-	width: 150px;
-	height: 190px;
-	border-radius:8px 0;
-	box-shadow: 2px 2px #556552;
-	margin: 6px;
-}
-.icon{
-	width: 80px;
-	height: 80px;
-	margin: 1rem auto;
-	display: block;
-}
-.icon:hover{
-	width: 94px; 
-	height: 94px;
-}
 .col{
-    flex-basis: calc(50% - 3px);
+    /*background: #58EA55;*/
+    flex-basis: calc(50% - 10px);
+    /*align-content: space-between;*/
     -webkit-flex-wrap: wrap;
     -moz-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
@@ -361,91 +303,25 @@ main{
     flex-wrap: wrap;
     display: flex;
 }
-.col_top{
-	width: 100%;
-	flex-wrap: nowrap;
-	-webkit-flex-wrap: nowrap;
-    -moz-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    -o-flex-wrap: nowrap;
-	display: flex;
-}
-.calend_ru img{
-	height: 248px;
-}
-.calend_ru{
-	margin: auto 0;
-}
+
 .sendQuest{
-	margin: 10px auto;
-}
-.sendQuest p{
-	background: rgba(242,255,170, 0.5);
-	padding: 15px 20px;
-	border-radius: 5px;
-	text-align: center;
-	opacity: 0.8;
-}
-.sendQuest p:hover{
-	opacity: 2;
-}
-.sendQuest a{
-	color: #E7361B;
+    margin: 0 auto;
 }
 .addinfo{
-    margin: 0 auto;
-    text-align: center;
-}
-.addinfo textarea{
-    border-radius: 7px;
-    border: none;
-    padding: 10px;
-    font-family: Comic Sans MS;
-    background: linear-gradient(45deg,#E3FFAA,#E0FF9D,#C4FF5F);
-}
-.q{
-    list-style-type: none;
-    margin: 4px auto;
-}
-.hidden{
-    visibility: hidden;
-}
-.selectCateg{
-    text-align: center;
-}
-.selectCateg select{
-    margin-bottom: 3px;
-    width: 50%;
-    border-radius: 5px;
-    border: none;
-    padding: 4px 6px;
-    font-family: Comic Sans MS;
-    background: linear-gradient(45deg,#E3FFAA,#E0FF9D,#C4FF5F);
-}
-.addinfo input{
-    width: 70%;
-    border-radius: 5px;
-    border: none;
-    padding: 4px 6px;
-    font-family: Comic Sans MS;
-    background: linear-gradient(45deg,#E3FFAA,#E0FF9D,#C4FF5F);
-}
-button{
-    background: linear-gradient(45deg,#E0FF9D,#D3FF73,#A0D440,#85C60F);
-    font-family: Comic Sans MS;
-    border-radius: 4px;
+    flex-direction: row; 
 }
 #slides{
     position: relative;
-    height: 340px;
+    height: 60%;
     width: 100%;
     padding: 0px;
     margin: 0px;
     list-style-type: none;
 }
+
 .slide{
     padding: 0;
-   	display: flex;
+    display: flex;
     -ms-display: flex;
     flex-direction: column;
     -ms-flex-direction: column;
@@ -471,10 +347,7 @@ button{
     position: absolute; /*чтобы текст был на картинках*/
     width: 100%;
     margin-top: 250px;
-    opacity: 0.7;
-}
-.wrap-text:hover{
-	opacity: 1;
+    opacity: 0.8;
 }
 .showing{
     opacity: 1;
@@ -528,15 +401,37 @@ a.desc1{
     font-size: 1rem;
     box-sizing: border-box;
     flex: auto;
-    color: white;
+}
+.categ{
+	background: linear-gradient(45deg,#E0FF9D,#D3FF73,#B2E652,#A0D440,#91C531,#76AF0D,#5DA411);
+	width: 100%;
+	height: 180px;
+	border-radius:8px 0;
+	box-shadow: 2px 2px #556552;
+	margin-bottom: 10px;
+}
+.icon{
+	width: 80px;
+	height: 80px;
+	margin: 1rem auto;
+	display: block;
+}
+.icon:hover{
+	width: 94px;
+	height: 94px;
+}
+h3{
+	text-align: center;
+	color: #000;
 }
 .footer{
+	/*background: #58EA55;*/
 	width: 100%;
 	/*height: 70px;*/
 	max-width: 1004px;
 	min-width: 430px;
-	margin: 40px auto 0;
-	padding: 10px;
+	margin: 15px auto 0;
+	padding: 15px;
 	/*flex-wrap: wrap;*/
 	/*align-items: flex-end;*/
 	/*justify-content: space-between;*/
@@ -550,9 +445,6 @@ a.desc1{
 }
 .social {
 
-    float: left;
+    float: right;
     padding: 0 30px 0 10px;
-}
-.about{
-	text-align: center;
 }
